--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "toplan/phpsms": "~1.8",
-         "mews/captcha": "~2.0"
+        "toplan/phpsms": "~1.8"
     },
     "autoload": {
         "classmap": [
